--- a/style.css
+++ b/style.css
@@ -119,3 +119,29 @@ figcaption{
     top: 80px;
     left: 200px;
 }  
+/* icons section styles */
+
+.icons-part{
+    margin-top: 200px;
+    margin-left: 240px;
+    display: grid;
+    grid-template-columns: repeat(5,1fr) ;
+    row-gap: 30px;
+}
+.icons p{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.icons{
+    width: 248px;
+}
+
+.icons:hover{
+    cursor: pointer;
+    border: 1px solid #F948B2;
+    color: #F948B2;
+    border-radius: 50px;
+    padding: 5px 5px;
+    
+}
