--- a/style.css
+++ b/style.css
@@ -26,11 +26,7 @@ header{
     text-align: center;
     font-size: 2.8rem;
 }
-.logo-image{
-    width: 80%;
-    height: 60%;
-    padding-top: 12px; 
-}
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -51,7 +47,7 @@ nav li{
     gap: 36px;
 
 }
-.icons{
+.icons-follow{
     display: flex;
     gap: 16px;
 }
@@ -97,7 +93,7 @@ figcaption{
     
 }
 
-.play-instanty-title{
+.play-instantly-title{
     text-align: right;  
     font-size: 3.2rem;
     font-weight: 700;
@@ -116,8 +112,8 @@ figcaption{
 }
   .cat{
     position: relative;
-    top: 80px;
-    left: 200px;
+    top: 5rem;
+    left: 12.5rem;
 }  
 /* icons section styles */
 
@@ -144,4 +140,58 @@ figcaption{
     border-radius: 50px;
     padding: 5px 5px;
     
+}
+/* footer styles */
+footer{
+    padding: 40px 240px;
+    align-items: center;
+    background-color: #0B0223;
+    margin-top: 120px;
+}
+.footer-content{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    align-items: center;
+}
+.footer-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #FFF;
+}
+
+.footer-sections-container{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+.footer-sections{
+    color: #FFF;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+.footer-terms-section{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    margin-top: 70px;
+}
+.footer-terms{
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 1rem;
+    font-weight: 500;
+}
+.footer-para{
+    color: rgba(255, 255, 255, 0.60);
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-top: 28px;
+    margin-bottom: 130px;
+}
+.footer-icons-container{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 66px;
 }
