--- a/style.css
+++ b/style.css
@@ -81,9 +81,9 @@ nav li{
     font-size: 1.2rem;
     font-weight: 500;
 }
-.responsive{
+ .banner-image{
     width: 60%;
-}
+} 
 .btn-primary{
     border: none;
     border-radius: 3rem;
@@ -93,6 +93,7 @@ nav li{
     font-size: 1.2rem;
     font-weight: 600;
     margin-left: 40px;
+    margin-bottom: 10px;
 }
 #blue{
     background: #4EC5F7;
@@ -165,23 +166,24 @@ figcaption{
     text-align: right;  
     font-size: 3.2rem;
     font-weight: 700;
-    width: 400px; 
+    width: 25rem; 
 }
 
 .play-instantly-description{
-    width: 353px;
+    width: 22rem;
     color: #534C64;
     text-align: center;
     font-size: 1rem;
     font-weight: 400;
 }
-.play-instantly-images{
+.cowboy{
     width: 100%;
 }
-  .cat{
+.cat{
     position: relative;
-    top: 5rem;
-    left: 12.5rem;
+    bottom: 12.5rem;
+    right: 15.625rem;
+    width: 50%;
 }  
 /* icons section styles */
 .icons{
@@ -278,4 +280,20 @@ footer{
     .footer-sections-container, .footer-terms-section{
         flex-direction: column;
     }
+    nav{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .online-games-cards {
+        margin-left: 0px;
+        padding-left: 60px;
+    }
+    .play-instantly-container, .icons-part{
+        margin: 0;
+        padding: 10px;
+    }
+     footer{
+        padding:20px 40px;
+    } 
+
 }
