--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ nav ul{
     list-style: none;
     display: flex;
     gap: 20px;
+    align-items: center;
 }
 nav li{
     color: #3C354F;
@@ -45,11 +46,20 @@ nav li{
 .icon-menu{
     display: flex;
     gap: 36px;
-
+    align-items: center;
+    padding: 5px 10px;
+   
 }
 .icons-follow{
     display: flex;
     gap: 16px;
+
+}
+.follow-box
+{
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+    height: 2em;
 }
 /* banner styles */
 .banner{
@@ -59,7 +69,8 @@ nav li{
     align-items: center;
     background-image: url("/images/Group\ 14.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-position: left;
+    background-size: contain;
     padding-left: 240px;
     padding-right: 240px;
     margin-bottom: 180px;
@@ -81,9 +92,9 @@ nav li{
     font-size: 1.2rem;
     font-weight: 500;
 }
- /* .banner-image{
-    width: 60%;
-}  */
+ .banner-image{
+    width: 50%;
+} 
 .btn-primary{
     border: none;
     border-radius: 3rem;
@@ -110,7 +121,7 @@ nav li{
     margin-right: 240px;
 }
 figcaption{
-    width: 342px;
+    width: 21.3rem;
     margin-top: 20px;
 }
 .online-games-title{
@@ -129,8 +140,8 @@ figcaption{
 }
  .hover-icon{
     position: relative;
-    bottom: 12.5rem;
-    left: 11.25rem;
+    bottom: 50%;
+    left: 50%;
     display: none;
     font-size: 1.2rem;
     font-weight: 600;
@@ -154,11 +165,12 @@ figcaption{
 }
 .play-instantly-container{
     display: flex; 
-    justify-content: space-between;
+    justify-content: end; 
+    gap: 200px;
     align-items: center;
-    margin-left: 500px;
-    margin-right: 240px;
-    margin-top: 50px;   
+    margin-top: 120px; 
+    margin-right: 240px; 
+    margin-right: 240px; 
     
 }
 
@@ -172,20 +184,14 @@ figcaption{
 .play-instantly-description{
     width: 22rem;
     color: #534C64;
-    text-align: center;
+    margin-top: 40px;
+    padding-left: 45px; 
+    text-align: right;
     font-size: 1rem;
     font-weight: 400;
-}
-.cowboy{
-    width: 39.625rem;
-}
-.cat{
-    position: relative;
-    top: 12.5rem;
-    right: 15.625rem;
-    width: 20rem;
     
-}  
+}
+
 /* icons section styles */
 .icons{
     display: flex;
@@ -195,15 +201,16 @@ figcaption{
     width: 250px;
 }
 .icons-part{
-    margin-top: 200px;
-    margin-left: 240px;
-}
-.icon-row1, .icon-row2{
     display: flex;
+    flex-wrap: wrap;
+    gap: 64px;
     justify-content: center;
-    gap: 60px;
-    margin-bottom: 60px;
+    align-items: center;
+    margin-top: 200px;
+    margin-left: 450px;
+    margin-right: 450px;
 }
+
  .icons p{
     font-size: 1.2rem;
     font-weight: 600;
@@ -277,36 +284,58 @@ footer{
     margin-top: 66px;
 }
 @media screen and (max-width:576px) {
-    nav, .banner, .online-games-cards,.play-instantly-container, .icon-row1, .icon-row2,
-    .footer-sections-container, .footer-terms-section{
+    nav, .nav-list, .online-games-cards,.play-instantly-container
+    {
         flex-direction: column;
     }
     nav{
         padding-left: 10px;
         padding-right: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .banner{
+        flex-direction: column-reverse;
+        background-position: bottom;
+        background-size: 420px 420px;
+    }
+    .btn-primary{
+        margin-left: 5px;
     }
     .online-games-cards {
         margin-left: 0px;
-        padding-left: 60px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     .play-instantly-container, .icons-part, .banner{
         margin-left: 0px;
         margin-right: 0px;
         padding: 10px;
+        gap: 20px;
     }
+    .play-instantly-description{
+        text-align: center;
+    }
+    .play-instantly-title{
+        text-align: center;
+    }
+    .play-instantly-images{
+        width: 80%;
+    }
+    .icons-part, .footer-sections-container, .footer-terms-section {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        padding: 10px;
+    }
+    .icons{
+        width: 50px;
+    }
+    
      footer{
         padding:20px 40px;
     } 
-    .banner-image{
-        width: 400px;
-    }
-    .cowboy{
-        width: 80%;
-    }
-    .cat{
-        position: relative;
-        bottom: 100px;
-        left: 220px;
-        width: 30%;
-    }
+     .banner-image{
+        width: 60%;
+    } 
+   
 }
