--- a/style.css
+++ b/style.css
@@ -201,16 +201,17 @@ figcaption{
     width: 250px;
 }
 .icons-part{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 64px;
+    display: grid;
+    grid-template-columns: repeat(5, 281px);
     justify-content: center;
     align-items: center;
     margin-top: 200px;
-    margin-left: 450px;
-    margin-right: 450px;
+    margin-left: 240px;
+    margin-right: 240px;
 }
-
+.row2{
+    margin-left: 150px;
+}
  .icons p{
     font-size: 1.2rem;
     font-weight: 600;
@@ -330,7 +331,9 @@ footer{
     .icons{
         width: 50px;
     }
-    
+    .row2{
+        margin-left: 0px;
+    }
      footer{
         padding:20px 40px;
     } 
