--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ nav li{
     justify-content: space-between;
     margin-top: 20px;
     align-items: center;
-    background-image: url("/images/Group\ 14.png");
+    background-image: url("images/Group\ 14.png");
     background-repeat: no-repeat;
     background-position: left;
     background-size: contain;
