--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ nav li{
     padding: 5px 10px;
    
 }
+
 .icons-follow{
     display: flex;
     gap: 16px;
@@ -115,13 +116,12 @@ nav li{
 
 .online-games-cards{
     display: flex;
-    gap: 24px;
-    justify-content: space-between;
+    justify-content: end;
     margin-left: 240px;
     margin-right: 240px;
 }
 figcaption{
-    width: 21.3rem;
+    width: 12.5rem;
     margin-top: 20px;
 }
 .online-games-title{
@@ -140,8 +140,8 @@ figcaption{
 }
  .hover-icon{
     position: relative;
-    bottom: 50%;
-    left: 50%;
+    bottom: 55%;
+    left: 28%;
     display: none;
     font-size: 1.2rem;
     font-weight: 600;
@@ -150,6 +150,10 @@ figcaption{
 .hover-title{
     margin-top: 20px;
     margin-right: 20px;
+}
+
+.card > img{
+    width: 80%;
 }
 .card:hover img{
     cursor: pointer;
@@ -165,13 +169,16 @@ figcaption{
 }
 .play-instantly-container{
     display: flex; 
-    justify-content: end; 
-    gap: 200px;
+    justify-content: end;
+    gap: 120px;
     align-items: center;
     margin-top: 120px; 
     margin-right: 240px; 
-    margin-right: 240px; 
+    margin-left: 240px; 
     
+}
+.play-instantly-images{
+    width: 40%;
 }
 
 .play-instantly-title{
@@ -198,11 +205,11 @@ figcaption{
     align-items: center;
     gap: 5px;
     padding: 10px 10px;
-    width: 250px;
+    width: 200px;
 }
 .icons-part{
     display: grid;
-    grid-template-columns: repeat(5, 281px);
+    grid-template-columns: repeat(5, 220px);
     justify-content: center;
     align-items: center;
     margin-top: 200px;
